update generator, support null, adding routes (#127)
also generates api-docs on initialize and as an artifact in gh actions

- closes
https://github.com/buchungapp/nationaal-watersportdiploma/issues/124
