# apps/api-server/src/operation-handlers/index.ts
@@ -1,1 +1,5 @@
-export * from './programs/index.js'
+export * from './location-certificate.js'
+export * from './location-cohort.js'
+export * from './location.js'
+export * from './me.js'
+export * from './program.js'
