# apps/api-server/src/operation-handlers/program.ts
@@ -1,0 +1,26 @@
+import * as api from '@nawadi/api'
+import * as core from '@nawadi/core'
+import * as application from '../application/index.js'
+
+export const getPrograms: api.GetProgramsOperationHandler<
+  application.Authentication
+> = async (incomingRequest, authentication) => {
+  const list = await core.Program.list()
+
+  const listEntity = list.map((item) => ({
+    id: item.id,
+    handle: item.handle,
+    title: item.title,
+    degreeId: item.degree.id,
+    degreeTitle: item.degree.title,
+    disciplineId: item.discipline.id,
+    disciplineTitle: item.discipline.title,
+  }))
+
+  return {
+    status: 200,
+    parameters: {},
+    contentType: 'application/json',
+    entity: () => listEntity,
+  }
+}
